--- a/main.html
+++ b/main.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 </head>
 <body>
-    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div id="myCarousel" class="carousel" data-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active">
+    <div class="carousel-item ">
       <img class="d-block w-100" src="C:\Users\prana\OneDrive\Documents\retro1.jpg" alt="image1">
     </div>
     <div class="carousel-item">
